<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">People In Photos</string>
    <string name="action_settings">Settings</string>
    <string name="select_resolution">Select camera resolution</string>
    <string name="title_activity_maxrate">Max Triggering rate</string>
    <string name="maxrate">Set the minimum time between two consecutive photos</string>
    <string name="maxrate_prompt">Set the minimum time between consecutive photos</string>
    <string name="title_activity_camera">CameraActivity</string>
    <string name="no_face_found">No faces in frame.</string>
    <string name="whoisthis">Who is this?</string>
    <string name="noone">No one (ignore)</string>
    <string name="someonenew">Someone new (create new ID)</string>
    <string name="ithink">I think it\'s ...</string>
    <string name="OK">OK</string>
    <string name="unknown">Unknown</string>
    <string name="match">Similar photos</string>
    <string name="calc_matches">Update matches</string>
    <string name="set_weights">Set weights</string>

    <string name="title_activity_gallery_scanner">GalleryScanner</string>
    <string name="hello_world">Hello world!</string>
    <string name="allinpic">Add faces from current photo.</string>
    <string name="next">Move to the next photo</string>
    <string name="stopident">Exit teaching</string>
    <string name="matchscore">Match score :</string>
    
    <string name="weight1">Distance</string>
    <string name="weight2">Expression</string>
    <string name="weight3">Gender</string>
    <string name="weight4">Age</string>
    <string name="weight5">Face count</string>
    
    <string name="set_weight_fragment_dialog_title">Set weights for similarity ranking</string>
</resources>