<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight1"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="@integer/weightsMax"
                android:paddingLeft="20dp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_expression"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight2"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <SeekBar
                android:id="@+id/seekBar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="@integer/weightsMax"
                android:paddingLeft="20dp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight3"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <SeekBar
                android:id="@+id/seekBar3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="@integer/weightsMax"
                android:paddingLeft="20dp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight4"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <SeekBar
                android:id="@+id/seekBar4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="@integer/weightsMax"
                android:paddingLeft="20dp" />

        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView_picnumdiff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weight5"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <SeekBar
                android:id="@+id/seekBar5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="@integer/weightsMax"
                android:paddingLeft="20dp" />

        </TableRow>

    </TableLayout>

</LinearLayout>